# fantasy-premier-league-etl

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  clean_up.py  cloudbuild.yaml  docker-compose.yaml  pyproject.toml  run.sh
.devcontainer/: docker-compose.yml
.github/workflows/: cicd.yaml
cloud_run_ingestion/: Dockerfile  requirements.txt
cloud_run_ingestion/ingestion/: config.py  models.py  pipeline.py  utilities.py
cloud_run_modeling/: Dockerfile
cloud_run_modeling/modeling/: dbt_project.yml  profiles.yml
cloud_run_modeling/modeling/models/: properties.yml  unit_test_flat_fixtures.yml
cloud_run_modeling/modeling/seeds/: properties.yml
dags/: fpl.py
dags/tasks/: task.py
ingestion/: models.py  pipeline.py  utilities.py
ingestion/load_parquet_to_bq_cf/: main.py
load_parquet_to_bq_cf/: main.py  requirements.txt
modeling/: profiles.yml
modeling/macros/: flatten_fixtures_stats.sql  properties.yml
modeling/models/: flat_fixtures.sql  properties.yml  unit_test_flat_fixtures.yml
modeling/models/dimensions/: players_cleansed.sql  teams_cleansed.sql
modeling/models/facts/: assists_stats.sql  (+11 more)
modeling/seeds/: proprerties.yml  stat_points.csv
modeling/snapshots/: snapshots_config.yml
plugins/: create_tables_sql.py
plugins/operators/: __init__.py  create_tables_operator.py
rendered_templates/teams/: renderered_sql_20240106_1742.sql
scripts/: cloud_build.sh  run.sh  update_job.sh
templates/: datetime.j2  games_results.j2  players.j2  players_stats.j2  teams.j2
templates/CREATIONS/: teams.sql
templates/INSERTIONS/: teams.j2
terraform/: .gitignore  .terraform.lock.hcl  backend.tf  locals.tf  main.tf  provider.tf  variables.tf
tests/: conftest.py  test_pipeline.py  test_utilities.py
(+17 files in other folders)
