[tool.poetry]
name = "fpl-project"
version = "0.1.0"
description = ""
authors = ["Omar <omarfessy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
psycopg2-binary = "^2.9.9"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
