[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
  "pydantic",
]
authors = [
  {name = "Omar Fessi", email = "omarfessy@gmail.com"},
]
description = "An end to end data pipeline to help fpl managers to make decisions based on data"
readme = "README.md"

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119
