[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
  "pydantic",
]
authors = [
  {name = "Omar Fessi", email = "omarfessy@gmail.com"},
]
description = "An end to end data pipeline to help fpl managers to make decisions based on data"
readme = "README.md"

[tool.ruff]
# Set the maximum line length to 79.
line_length = 119


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
